# Saturn

./: .gitignore  README.md  package-lock.json  package.json
Saturn-UI/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
Saturn-UI/src/: App.css  App.tsx  index.css  types.ts
Saturn-UI/src/components/: ChatPanel.tsx  ConstellationModal.tsx  GraphPanel.tsx  Loader.tsx  MessageContent.tsx  Sidebar.tsx
Saturn-UI/src/lib/: api.ts  graphBuilder.ts
saturn-agents/: .env.example  .gitignore  config.py  docker-compose.yaml  main.py  pyproject.toml  run_local_query.py
saturn-agents/agents/: inspect_graph.py  neo4j_agent.py  qdrant_agent.py  saturn_graph.py  search_agent.py  state.py
saturn-agents/agents/tools/: neo4j_tool.py  qdrant_tool.py
saturn-agents/api/: README.md  __init__.py  app.py  run.py
saturn-agents/db/: __init__.py  neo4j_client.py  qdrant_client.py
saturn-agents/query/: graph_rag_query.py
saturn-agents/services/: __init__.py  community_detection_service.py  extraction_service.py  graph_write_service.py  ingestion_service.py  summary_service.py  vector_store_service.py
