[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saturn-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.3",
    "google-genai>=2.8.0",
    "httpx>=0.28.1",
    "langchain>=1.3.1",
    "langchain-community>=0.4.2",
    "langchain-deepseek>=1.0.1",
    "langchain-openai>=1.2.2",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "neo4j>=6.2.0",
    "openai>=2.38.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pypdf>=6.13.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "sqlalchemy>=2.0.49",
    "tqdm>=4.67.3",
    "uvicorn[standard]>=0.47.0",
]

[tool.setuptools]
packages = ["db", "services"]
py_modules = ["config", "main"]
